# dfordivam.github.io

./: .gitignore  CNAME  LICENSE  README.md  about.html  about.markdown  archive.html  atom.xml  contact.html  contact.markdown  dfordivam-github-io.cabal  index.html  shell.nix  site.hs
css/: default.css
posts/: 2018-02-27-introducing-tenjinreader-for-haskellers.html  2018-02-27-introducing-tenjinreader-for-haskellers.markdown  2018-02-27-introducing-tenjinreader.html  2018-02-27-introducing-tenjinreader.markdown  2018-03-08-「tenjinreader.com」の開発体験レポート.html  2018-03-08-「tenjinreader.com」の開発体験レポート.markdown  2018-09-23-wwoofing-in-kyoto.html  2018-09-23-wwoofing-in-kyoto.markdown  2021-09-05-espresso-high-extraction.html  2021-09-05-espresso-high-extraction.markdown
templates/: default.html
